--- a/views/password-reset-form.ejs
+++ b/views/password-reset-form.ejs
@@ -2,7 +2,7 @@
 <% script('/assets/js/reset-password.js') -%>
 
 <form id="reset" method="post" action="/password/reset">
-	<input type="hidden" name="seller[emailAddress]" value="<%=emailAddress %>" />
+	<input type="hidden" name="user[emailAddress]" value="<%=emailAddress %>" />
 	<fieldset>
 		<legend>Password Reset</legend>
 
@@ -14,7 +14,7 @@
 		<div id="divPassword" class="control-group">
 			<label class="control-label">New Password</label>
 			<div class="controls">
-				<input type="password" id="password" name="seller[password]" required="required" />
+				<input type="password" id="password" name="user[password]" required="required" />
 				<span id="spanPassword" class="help-block"></span>
 			</div>
 		</div>
@@ -22,7 +22,7 @@
 		<div id="divConfirmPassword" class="control-group">
 			<label class="control-label">Confirm Password</label>
 			<div class="controls">
-				<input type="password" id="confirmPassword" name="seller[confirmPassword]"
+				<input type="password" id="confirmPassword" name="user[confirmPassword]"
 						required="required" />
 				<span id="spanConfirmPassword" class="help-block"></span>
 			</div>
