--- a/views/seller-registration-form.ejs
+++ b/views/seller-registration-form.ejs
@@ -1,84 +1,9 @@
 <% layout('../../views/layout') -%>
-<% script('../static/js/sellers/registration-form.js') -%>
+<% script('../static/js/seller-registration-form.js') -%>
 
 <%
 var provincesString = JSON.stringify(provinces);
-
-if (validationErrors) {
-	if (validationErrors.emailError) {
-		var emailError = validationErrors.emailError;
-		var emailAlertType = 'error';
-	} else {
-		var emailError = '';
-		var emailAlertType = '';
-	}
-
-	if (validationErrors.passwordError) {
-		var passwordError = validationErrors.passwordError;
-		var passwordAlertType = 'error';
-	} else {
-		var passwordError = '';
-		var passwordAlertType = '';
-	}
-
-	if (validationErrors.isContactNumbersError) {
-		var contactNumbersAlertDisplay = '';
-	} else {
-		var contactNumbersAlertDisplay = 'none';
-	}
-
-	if (validationErrors.isSellerTypeError) {
-		var sellerTypeAlertDisplay = '';
-	} else {
-		var sellerTypeAlertDisplay = 'none';
-	}
-
-	if (validationErrors.isLocationError) {
-		var locationAlertDisplay = '';
-	} else {
-		var locationAlertDisplay = 'none';
-	}
-
-	if (validationErrors.townError) {
-		var townError = validationErrors.townError;
-		var townAlertType = 'error';
-	} else {
-		var townError = '';
-		var townAlertType = '';
-	}
-
-	if (validationErrors.dealershipNameError) {
-		var dealershipNameError = validationErrors.dealershipNameError;
-		var dealershipNameAlertType = '';
-	} else {
-		var dealershipNameError = '';
-		var dealershipNameAlertType = 'error';
-	}
-
-	if (validationErrors.dealershipAddressError) {
-		var dealershipAddressError = validationErrors.dealershipAddressError;
-		var dealershipAddressAlertType = '';
-	} else {
-		var dealershipAddressError = '';
-		var dealershipAddressAlertType = 'error';
-	}
-} else {
-		var emailError = '';
-		var emailAlertType = '';
-		var passwordError = '';
-		var passwordAlertType = '';
-		var passwordConfirmedError = '';
-		var passwordConfirmedAlertType = '';
-		var contactNumbersAlertDisplay = 'none';
-		var sellerTypeAlertDisplay = 'none';
-		var locationAlertDisplay = 'none';
-		var dealershipNameError = '';
-		var dealershipNameAlertType = '';
-		var dealershipAddressError = '';
-		var dealershipAddressAlertType = '';
-}
 %>
-
 
 <form id="register" method="post" action="<%=action%>">
 	<input type="hidden" id="loggedIn" value="<%=isLoggedIn%>" />
@@ -88,29 +13,29 @@ if (validationErrors) {
 		<div class="row">
 			<div class="span6">
 	<!-- Email address -->
-				<div id="divEmail" class="control-group <%=emailAlertType%>">
+				<div id="divEmail" class="control-group <%=validationErrors.emailAlertType%>">
 					<label class="control-label" for="email">Email address</label>
 					<div class="controls">
-						<input type="email" id="email" name="seller[emailAddress]" value="<%=emailAddress%>"
+						<input type="email" id="email" name="user[emailAddress]" value="<%=emailAddress%>"
 							/>
-						<span id="spanEmail" class="help-inline"><%=emailError %></span>
+						<span id="spanEmail" class="help-inline"><%=validationErrors.emailError%></span>
 					</div>
 				</div>
 			</div>
 			<div class="span6">
 	<!-- Password -->
-				<div id="divPassword" class="control-group <%=passwordAlertType%>">
+				<div id="divPassword" class="control-group <%=validationErrors.passwordAlertType%>">
 					<label class="control-label" for="password">Password</label>
 					<div class="controls">
-						<input type="password" id="password" name="seller[password]" value="<%=password%>"/>
-						<span id="spanPassword" class="help-inline"><%=passwordError%></span>
+						<input type="password" id="password" name="user[password]" value="<%=password%>"/>
+						<span id="spanPassword" class="help-inline"><%=validationErrors.passwordError%></span>
 					</div>
 				</div>
 	<!-- Confirm password -->
-				<div id="divConfirmPassword" class="control-group <%=passwordConfirmedAlertType || ''%>">
+				<div id="divConfirmPassword" class="control-group">
 					<label class="control-label" for="confirmPassword">Confirm password</label>
 					<div class="controls">
-						<input type="password" id="confirmPassword" name="seller[confirmPassword]"
+						<input type="password" id="confirmPassword" name="user[confirmPassword]"
 							value="<%=password%>"/>
 						<span id="spanConfirmPassword" class="help-inline"></span>
 					</div>
@@ -123,27 +48,27 @@ if (validationErrors) {
 		<div class="row">
 			<div class="span6">
 	<!-- First name -->
-				<div id="divFirstName" class="control-group">
+				<div id="divFirstName" class="control-group <%=validationErrors.firstnameAlertType%>">
 					<label class="control-label" for="first_name">First name</label>
 					<div class="controls">
 						<input type="text" id="first_name" name="seller[firstname]" value="<%=firstname%>"
 								/>
-						<span id="spanFirstName" class="help-inline">&nbsp;</span>
+						<span id="spanFirstName" class="help-inline"><%=validationErrors.firstnameError%></span>
 					</div>
 				</div>
 	<!-- Surname -->
-				<div id="divSurname" class="control-group">
+				<div id="divSurname" class="control-group <%=validationErrors.surnameAlertType%>">
 					<label class="control-label"  for="surname">Surname</label>
 					<div class="controls">
 						<input type="text" id="surname" name="seller[surname]" value="<%=surname%>"
 								/>
-						<span id="spanSurname" class="help-inline">&nbsp;</span>
+						<span id="spanSurname" class="help-inline"><%=validationErrors.surnameError%></span>
 					</div>
 				</div>
 			</div>
 			<div class="span6">
 				<div id="contactNumbersAlert" class="alert alert-error"
-						style="display: <%=contactNumbersAlertDisplay%>">
+						style="display: <%=validationErrors.contactNumbersAlertDisplay%>">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
 					Please supply either a telephone or a cellphone number, or both. Use only digits, e.g. 0123456789.
 				</div>
@@ -203,53 +128,59 @@ if (validationErrors) {
 			<div class="span6" id="leftColumn">
 				<div id="dealershipDetails" style="display: none">
 	<!-- Dealership name -->
-					<div class="control-group <%=dealershipNameAlertType%>" >
+					<div class="control-group" >
 						<label class="control-label" for="dealershipName">Name</label>
 						<div class="controls">
 							<input type="text" id="dealershipName" name="seller[dealershipName]"
 								   value="<%=dealershipName%>" />
-							<span class="help-inline"><%=dealershipNameError%></span>
+							<span class="help-inline"></span>
 						</div>
 					</div>
 	<!-- Street address -->
-					<div class="control-group <%=dealershipAddressAlertType%>">
-						<label class="control-label" for="streetAddress1">Street address</label>
+					<div class="control-group">
+						<label class="control-label" for="street">Street address</label>
 						<div class="controls">
-							<input type="text" id="streetAddress1" name="seller[street]"
+							<input type="text" id="street" name="seller[street]"
 								   value="<%=address.street%>" /><br />
-							<input type="text" id="streetAddress2" name="seller[suburb]"
+							<input type="text" id="suburb" name="seller[suburb]"
 								   value="<%=address.suburb%>" />
-							<span class="help-inline"><%=dealershipAddressError%></span>
+							<span class="help-inline"></span>
 						</div>
 					</div>
 				</div>
 	<!-- Province -->
-				<div id="provincesDiv">
-					<label>Province</label>
-					<select id="provinces" name="seller[province]">
-					<% if (province) { %>
-						<option selected="selected" value="<%=address.province%>"><%=address.province%></option>
-					<% } else { %>
-						<option selected="selected">Please select ...</option>
-					<% } %>
-					<% for (p in provinces) { %>
-						<option value="<%=provinces[p].name%>"><%=provinces[p].name%></option>
-					<% } %>
-					</select>
+				<div id="divProvinces" class="control-group <%=validationErrors.provinceAlertType%>">
+					<label class="control-label" for="provinces">Province</label>
+					<div class="controls">
+						<select id="provinces" name="seller[province]">
+						<% if (province) { %>
+							<option selected="selected" value="<%=address.province%>"><%=address.province%></option>
+						<% } else { %>
+							<option selected="selected">Please select ...</option>
+						<% } %>
+						<% for (p in provinces) { %>
+							<option value="<%=provinces[p].name%>"><%=provinces[p].name%></option>
+						<% } %>
+						</select>
+						<span id="spanProvinces" class="help-inline"><%=validationErrors.provinceError%></span>
+					</div>
 				</div>
 			</div>
 			<div class="span6" id="rightColumn">
 				<input type="hidden" id="locations" value="<%=provincesString%>" />
 	<!-- Town -->
-				<div id="townsDiv">
-					<label>Town</label>
-					<select id="towns" name="seller[town]">
-					<% if (town) { %>
-						<option selected="selected" value="<%=address.town%>"><%=address.town%></option>
-					<% } else { %>
-						<option selected="selected">Please select ...</option>
-					<% } %>
-					</select>
+				<div id="divTowns" class="control-group <%=validationErrors.townAlertType%>">
+					<label class="control-label" for="towns">Town</label>
+					<div class="controls">
+						<select id="towns" name="seller[town]">
+						<% if (town) { %>
+							<option selected="selected" value="<%=address.town%>"><%=address.town%></option>
+						<% } else { %>
+							<option selected="selected">Please select ...</option>
+						<% } %>
+						</select>
+						<span id="spanTowns" class="help-inline"><%=validationErrors.townError%></span>
+					</div>
 				</div>
 			</div>
 			</div>
