--- a/views/seller-profile-page.ejs
+++ b/views/seller-profile-page.ejs
@@ -1,49 +1,43 @@
 <% layout('../../views/layout') -%>
 
-<%
-if (sellerType === 'dealership') {
-	var dlrDisplay = '';
-	var psDisplay = 'none';
-} else {
-	var dlrDisplay = 'none';
-	var psDisplay = '';
-}
-%>
-
 <h2>My Profile</h2>
 
-<form method="get" action="/seller/<%=sellerId%>/remove">
-    <fieldset id="dealership" style="display: <%=dlrDisplay%>">
-		<p><i class="icon-briefcase"></i>&nbsp;<strong><%= dealershipName %></strong></p>
+<form method="get" action="/seller/<%=seller._id%>/remove">
+    <fieldset id="dealership" style="display: <%=dealerDisplay%>">
+		<p><i class="icon-briefcase"></i>&nbsp;<strong><%=seller.dealershipName%></strong></p>
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-road"></i>&nbsp;<%=address.streetAddress%></p>
-				<p><i class="icon-road"></i>&nbsp;<%=address.suburb%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=address.town%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=address.province%></p>
+				<p><i class="icon-road"></i>&nbsp;<%=seller.address.street%></p>
+				<p><i class="icon-road"></i>&nbsp;<%=seller.address.suburb%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.town%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.province%></p>
 			</div>
 			<div class="span4">
 				<div class="span6">
-					<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
-					<p><i class="icon-envelope"></i>&nbsp; <%=email%></p>
-					<p><i class="icon-home"></i>&nbsp; <%=contactNumbers.telephone%></p>
-					<p><i class="icon-signal"></i>&nbsp; <%=contactNumbers.cellphone%></p>
+					<p><i class="icon-user"></i>&nbsp;
+						<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
+					<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
+				<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
+					<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
+				<% } %>
+			</div>
 				</div>
 
 			</div>
 		</div>
     </fieldset>
-    <fieldset id="privateSeller" style="display: <%=psDisplay%>">
+    <fieldset id="privateSeller" style="display: <%=privateSellerDisplay%>">
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
-				<p><i class="icon-envelope"></i>&nbsp; <%=email%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=address.town%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=address.province%></p>
+				<p><i class="icon-user"></i>&nbsp;
+					<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
+				<p><i class="icon-envelope"></i>&nbsp;<%=user.emailAddress%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.town%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.province%></p>
 			</div>
 			<div class="span4">
-			<% for (var i = 0; i < contactNumbers.length; i++) { %>
-				<p><i class="icon-home"></i>&nbsp; <%=contactNumbers[i]%></p>
+			<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
+				<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
 			<% } %>
 			</div>
 		</div>
