--- a/views/seller-registration-form.ejs
+++ b/views/seller-registration-form.ejs
@@ -1,9 +1,14 @@
-<% layout('../../views/layout') -%>
-<% script('../static/js/seller-registration-form.js') -%>
+<% layout('../views/layout') -%>
+<% script('../../static/js/seller-registration-form.js') -%>
 
 <%
 var provincesString = JSON.stringify(provinces);
 %>
+
+<div id="specialErrorAlert" class="alert alert-error"	style="display: <%=specialError.alertDisplay%>">
+	<button type="button" class="close" data-dismiss="alert">&times;</button>
+	<%=specialError.message%> If you are already registered, please <a href="/login">log in</a>
+</div>
 
 <form id="register" method="post" action="<%=action%>">
 	<input type="hidden" id="loggedIn" value="<%=isLoggedIn%>" />
@@ -95,7 +100,7 @@ var provincesString = JSON.stringify(provinces);
     <fieldset>
 		<legend>Seller type</legend>
 		<input type="hidden" id="sellerType" value="<%=sellerType%>" />
-		<div id="sellerTypeAlert" class="alert alert-error" style="display: <%=sellerTypeAlertDisplay%>">
+		<div id="sellerTypeAlert" class="alert alert-error" style="display: none">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			Please specify which type of seller you are by clicking either the Private seller option button or the
 			Dealership option button.
@@ -104,22 +109,20 @@ var provincesString = JSON.stringify(provinces);
 	<!-- Private seller -->
 			<div class="span3">
 				<label class="radio">
-					<input type="radio" id="privateSeller" name="seller[type]"
-						value="private seller" checked="<%=privateRadioButton%>"/>Private seller
+					<input type="radio" id="privateSeller" name="seller[type]" value="private seller"/>Private seller
 				</label>
 			</div>
 	<!-- Dealership -->
 			<div class="span3">
 				<label class="radio">
-					<input type="radio" id="dealership"  name="seller[type]"
-						value="dealership" checked="<%=dealerRadioButton%>"/>Dealership
+					<input type="radio" id="dealership"  name="seller[type]" value="dealership"/>Dealership
 				</label>
 			</div>
 		</div>
     </fieldset>
     <fieldset>
 		<legend id="dealerOrLocation">Location</legend>
-		<div id="locationAlert" class="alert alert-error" style="display: <%=locationAlertDisplay%>">
+		<div id="locationAlert" class="alert alert-error" style="display: <%=validationErrors.locationAlertDisplay%>">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			Please specify the province and town.
 		</div>
@@ -174,7 +177,7 @@ var provincesString = JSON.stringify(provinces);
 					<label class="control-label" for="towns">Town</label>
 					<div class="controls">
 						<select id="towns" name="seller[town]">
-						<% if (town) { %>
+						<% if (seller.address.town) { %>
 							<option selected="selected" value="<%=seller.address.town%>">
 								<%=seller.address.town%>
 							</option>
