--- a/views/vehicle-profile-page.ejs
+++ b/views/vehicle-profile-page.ejs
@@ -1,4 +1,4 @@
-<% layout('../../views/layout') -%>
+<% layout('../views/layout') -%>
 
 <%
 
@@ -84,267 +84,246 @@ var colorRadio = 'green';
 var radio = 'No';
 var colorRadio = 'red';
 }
-
-if (seller.type === 'dealership') {
-var dlrDisplay = '';
-var psDisplay = 'none';
-var dealershipName = seller.name;
-var fullname = seller.contactPerson.firstname.concat(' ').concat(seller.contactPerson.surname);
-var street = seller.address.street;
-var suburb = seller.address.suburb;
-} else {
-var dlrDisplay = 'none';
-var psDisplay = '';
-var dealershipName = '';
-var fullname = seller.name.firstname.concat(' ').concat(seller.name.surname);
-var street = '';
-var suburb = '';
-}
-
-var formActionsDisplay = isSameSeller ? '' : 'none';
 %>
 
-	<div class="page-header">
-		<h1>Vehicle <small><%=vehicle.market%></small></h1>
+<div class="page-header">
+	<h1>Vehicle <small><%=vehicle.market%></small></h1>
+</div>
+
+<h2>
+	<%=vehicle.type.year%> <%=vehicle.type.make%> <%=vehicle.type.model%> R<%=vehicle.price.value%>
+	<small><%=negotiable%></small>
+</h2>
+
+<div class="row">
+	<div class="span6"> <!-- Thumbnails -->
+		<ul class="thumbnails">
+			<li class="span6">
+				<img class="thumbnail" src="<%=photo1%>"/>
+			</li>
+			<li class="span2">
+				<img class="thumbnail" src="<%=photo2%>"/>
+			</li>
+			<li class="span2">
+				<img class="thumbnail" src="<%=photo3%>"/>
+			</li>
+			<li class="span2">
+				<img class="thumbnail" src="<%=photo4%>"/>
+			</li>
+		</ul>
 	</div>
 
-	<h2>
-		<%=vehicle.type.year%> <%=vehicle.type.make%> <%=vehicle.type.model%> R<%=vehicle.price.value%>
-		<small><%=negotiable%></small>
-	</h2>
-	<div class="row">
-		<div class="span6"> <!-- Thumbnails -->
-			<ul class="thumbnails">
-				<li class="span6">
-					<img class="thumbnail" src="<%=photo1%>"/>
-				</li>
-				<li class="span2">
-					<img class="thumbnail" src="<%=photo2%>"/>
-				</li>
-				<li class="span2">
-					<img class="thumbnail" src="<%=photo3%>"/>
-				</li>
-				<li class="span2">
-					<img class="thumbnail" src="<%=photo4%>"/>
-				</li>
-			</ul>
-		</div>
+	<div class="span6">
+		<div class="row">
+			<div class="span3"> <!-- Description -->
+				<fieldset>
+					<legend>Description</legend>
 
-		<div class="span6">
-			<div class="row">
-				<div class="span3"> <!-- Description -->
-					<fieldset>
-						<legend>Description</legend>
-
-						<p>
-							<strong>Mileage:</strong>
-							<%=vehicle.description.mileage%> km
-						</p>
-
-						<p>
-							<strong>Colour:</strong>
-							<%=vehicle.description.color%>
-						</p>
-
-						<p>
-							<strong>Full service history:</strong>
-							<span style="color:<%=colorFullServiceHistory%>">
-								<%=fullServiceHistory%>
-							</span>
-						</p>
-					</fieldset>
-				</div>
-
-				<div class="span3"> <!-- Mechanics -->
-					<fieldset>
-						<legend>Mechanics</legend>
-
-						<p>
-							<strong>Engine capacity:</strong>
-							<%=vehicle.mechanics.engineCapacity%> L
-						</p>
-
-						<p>
-							<strong>Fuel type:</strong>
-							<%=vehicle.mechanics.fuel%>
-						</p>
-
-						<p>
-							<strong>Transmission:</strong>
-							<%=vehicle.mechanics.transmission%>
-						</p>
-
-						<p>
-							<strong>ABS Brakes:</strong>
-							<span style="color:<%=colorAbsBrakes%>">
-								<%=absBrakes%>
-							</span>
-						</p>
-					</fieldset>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="span3"> <!-- Security -->
-					<fieldset>
-						<legend>Security</legend>
-
-						<p>
-							<strong>Alarm:</strong>
-							<span style="color:<%=colorAlarm%>">
-								<%=alarm%>
-							</span>
-						</p>
-
-						<p>
-							<strong>Central locking:</strong>
-							<span style="color:<%=colorCentralLocking%>">
-								<%=centralLocking%>
-							</span>
-						</p>
-
-						<p>
-							<strong>Immobiliser:</strong>
-							<span style="color:<%=colorImmobilizer%>">
-								<%=immobilizer%>
-							</span>
-						</p>
-
-						<p>
-							<strong>Gear lock:</strong>
-							<span style="color:<%=colorGearLock%>">
-								<%=gearLock%>
-							</span>
-						</p>
-					</fieldset>
-				</div>
-
-				<div class="span3"> <!-- Luxuries -->
-					<fieldset>
-						<legend>Luxuries</legend>
-
-						<p>
-							<strong>Electrical windows:</strong>
-							<%=vehicle.luxuries.electricWindows%>
-						</p>
-
-						<p>
-							<strong>Air conditioning:</strong>
-							<span style="color:<%=colorAirConditioning%>">
-								<%=airConditioning%>
-							</span>
-						</p>
-
-						<p>
-							<strong>CD player:</strong>
-							<span style="color:<%=colorCDPlayer%>">
-								<%=cdPlayer%>
-							</span>
-						</p>
-
-						<p>
-							<strong>Radio:</strong>
-							<span style="color:<%=colorRadio%>">
-								<%=radio%>
-							</span>
-						</p>
-					</fieldset>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="span3"> <!-- Safety -->
-					<fieldset>
-						<legend>Safety</legend>
-
-						<p>
-							<strong>Air bags:</strong>
-							<%=vehicle.safety.airBags%>
-						</p>
-					</fieldset>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="span6"> <!-- Comments -->
-					<fieldset>
-						<legend>Comments from seller</legend>
-						<p><%=vehicle.comments%></p>
-					</fieldset>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="span6">
-			<fieldset>
-				<legend>Seller <small><%=seller.type%></small></legend>
-
-				<div id="dealership" style="display: <%=dlrDisplay%>">
 					<p>
-						<i class="icon-briefcase"></i>&nbsp;<strong><%=dealershipName %></strong>
+						<strong>Mileage:</strong>
+						<%=vehicle.description.mileage%> km
 					</p>
 
-					<div class="row">
-						<div class="span4">
-							<p><i class="icon-road"></i>&nbsp;<%=street%></p>
-							<p><i class="icon-road"></i>&nbsp;<%=suburb%></p>
-							<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.town%></p>
-							<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.province%></p>
-						</div>
+					<p>
+						<strong>Colour:</strong>
+						<%=vehicle.description.color%>
+					</p>
 
-						<div class="span4">
-							<div class="span6">
-								<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
-								<p><i class="icon-envelope"></i>&nbsp; <%=seller.account.emailAddress%></p>
-								<p><i class="icon-home"></i>&nbsp; <%=seller.telephone %></p>
-								<p><i class="icon-signal"></i>&nbsp; <%=seller.cellphone %></p>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div id="privateSeller" style="display: <%= psDisplay %>">
-					<div class="row">
-						<div class="span3">
-							<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
-							<p><i class="icon-envelope"></i>&nbsp; <%=seller.account.emailAddress%></p>
-							<p>
-								<i class="icon-map-marker"></i>&nbsp;
-								<%=seller.address.town%>,
-								<%=seller.address.province %>
-							</p>
-						</div>
-
-						<div class="span3">
-							<p><i class="icon-home"></i>&nbsp; <%=seller.telephone %></p>
-							<p><i class="icon-signal"></i>&nbsp; <%=seller.cellphone %></p>
-						</div>
-					</div>
-				</div>
-			</fieldset>
-		</div>
-
-		<div class="span6">
-				<fieldset>
-					<legend>Email seller</legend>
-
-					<label>Your name:</label>
-					<input type="text" id="buyerName" name="buyer[name]" />
-
-					<label>Your email address:</label>
-					<input type="email" id="buyerEmailAddress" name="buyer[emailAddress" />
-
-					<label>Message:</label>
-					<textarea id="buyerMessage" name="buyer[message]" class="span6" />
-					</textarea>
-					<button class="btn btn-primary">Send</button>
-					<button class="btn btn-link">Cancel</button>
+					<p>
+						<strong>Full service history:</strong>
+						<span style="color:<%=colorFullServiceHistory%>">
+							<%=fullServiceHistory%>
+						</span>
+					</p>
 				</fieldset>
+			</div>
+
+			<div class="span3"> <!-- Mechanics -->
+				<fieldset>
+					<legend>Mechanics</legend>
+
+					<p>
+						<strong>Engine capacity:</strong>
+						<%=vehicle.mechanics.engineCapacity%> L
+					</p>
+
+					<p>
+						<strong>Fuel type:</strong>
+						<%=vehicle.mechanics.fuel%>
+					</p>
+
+					<p>
+						<strong>Transmission:</strong>
+						<%=vehicle.mechanics.transmission%>
+					</p>
+
+					<p>
+						<strong>ABS Brakes:</strong>
+						<span style="color:<%=colorAbsBrakes%>">
+							<%=absBrakes%>
+						</span>
+					</p>
+				</fieldset>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span3"> <!-- Security -->
+				<fieldset>
+					<legend>Security</legend>
+
+					<p>
+						<strong>Alarm:</strong>
+						<span style="color:<%=colorAlarm%>">
+							<%=alarm%>
+						</span>
+					</p>
+
+					<p>
+						<strong>Central locking:</strong>
+						<span style="color:<%=colorCentralLocking%>">
+							<%=centralLocking%>
+						</span>
+					</p>
+
+					<p>
+						<strong>Immobiliser:</strong>
+						<span style="color:<%=colorImmobilizer%>">
+							<%=immobilizer%>
+						</span>
+					</p>
+
+					<p>
+						<strong>Gear lock:</strong>
+						<span style="color:<%=colorGearLock%>">
+							<%=gearLock%>
+						</span>
+					</p>
+				</fieldset>
+			</div>
+
+			<div class="span3"> <!-- Luxuries -->
+				<fieldset>
+					<legend>Luxuries</legend>
+
+					<p>
+						<strong>Electrical windows:</strong>
+						<%=vehicle.luxuries.electricWindows%>
+					</p>
+
+					<p>
+						<strong>Air conditioning:</strong>
+						<span style="color:<%=colorAirConditioning%>">
+							<%=airConditioning%>
+						</span>
+					</p>
+
+					<p>
+						<strong>CD player:</strong>
+						<span style="color:<%=colorCDPlayer%>">
+							<%=cdPlayer%>
+						</span>
+					</p>
+
+					<p>
+						<strong>Radio:</strong>
+						<span style="color:<%=colorRadio%>">
+							<%=radio%>
+						</span>
+					</p>
+				</fieldset>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span3"> <!-- Safety -->
+				<fieldset>
+					<legend>Safety</legend>
+
+					<p>
+						<strong>Air bags:</strong>
+						<%=vehicle.safety.airBags%>
+					</p>
+				</fieldset>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span6"> <!-- Comments -->
+				<fieldset>
+					<legend>Comments from seller</legend>
+					<p><%=vehicle.comments%></p>
+				</fieldset>
+			</div>
 		</div>
 	</div>
-	<div class="form-actions" style="display:<%=formActionsDisplay%>">
-		<a href="/vehicle/edit" class="btn">Edit</a>
-		<a href="/vehicle/remove" class="btn btn-link">Delete</a>
+</div>
+
+<div class="row">
+	<div class="span6">
+		<fieldset>
+			<legend>Seller <small><%=seller.type%></small></legend>
+
+			<div id="dealership" style="display: <%=dealerDisplay%>">
+				<p><i class="icon-briefcase"></i>&nbsp;<strong><%=seller.dealershipName %></strong></p>
+				<div class="row">
+					<div class="span3">
+						<p><i class="icon-road"></i>&nbsp;<%=seller.address.street%></p>
+						<p><i class="icon-road"></i>&nbsp;<%=seller.address.suburb%></p>
+						<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.town%></p>
+						<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.province%></p>
+					</div>
+					<div class="span3">
+						<p><i class="icon-user"></i>&nbsp;<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
+						<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
+					<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
+						<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
+					<% } %>
+					</div>
+				</div>
+			</div>
+
+			<div id="privateSeller" style="display: <%=privateSellerDisplay%>">
+				<div class="row">
+					<div class="span3">
+						<p><i class="icon-user"></i>&nbsp;<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
+						<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
+						<p>
+							<i class="icon-map-marker"></i>&nbsp;
+							<%=seller.address.town%>,
+							<%=seller.address.province %>
+						</p>
+					</div>
+
+					<div class="span3">
+					<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
+						<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
+					<% } %>
+					</div>
+				</div>
+			</div>
+		</fieldset>
 	</div>
+
+	<div class="span6">
+		<fieldset>
+			<legend>Email seller</legend>
+
+			<label>Your name:</label>
+			<input type="text" id="buyerName" name="buyer[name]" />
+
+			<label>Your email address:</label>
+			<input type="email" id="buyerEmailAddress" name="buyer[emailAddress" />
+
+			<label>Message:</label>
+			<textarea id="buyerMessage" name="buyer[message]" class="span6" />
+			</textarea>
+			<button class="btn btn-primary">Send</button>
+			<button class="btn btn-link">Cancel</button>
+		</fieldset>
+	</div>
+</div>
+<div class="form-actions" style="display:<%=formActionsDisplay%>">
+	<a href="/vehicle/edit" class="btn">Edit</a>
+	<a href="/vehicle/remove" class="btn btn-link">Delete</a>
+</div>
