--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -1,57 +1,13 @@
-<% layout('../../views/layout') -%>
-<% script('../../static/js/vehicles/registration-form.js') -%>
-<% script('../../static/js/bootstrap.file-input.js') -%>
+<% layout('../views/layout') -%>
+<% script('../../../static/js/vehicle-registration-form.js') -%>
+<% script('../../../static/js/bootstrap.file-input.js') -%>
 
-<%
-var manufacturersString = JSON.stringify(makes);
-var currentDateObject = new Date(Date.now());
-var thisYear = currentDateObject.getFullYear();
-
-var _id = vehicle ? vehicle._id : '';
-
-var market = vehicle ? vehicle.market : '';
-
-var mileage = vehicle ? vehicle.description.mileage : '';
-var fullServiceHistory = vehicle ? vehicle.description.fullServiceHistory : '';
-
-var engineCapacity = vehicle ? vehicle.mechanics.engineCapacity : '';
-var absBrakes = vehicle ? vehicle.mechanics.absBrakes : '';
-var powerSteering = vehicle ? vehicle.mechanics.powerSteering : '';
-
-var airConditioning = vehicle ? vehicle.luxuries.airConditioning : '';
-var cdPlayer = vehicle ? vehicle.luxuries.cdPlayer : '';
-var radio = vehicle ? vehicle.luxuries.radio : '';
-
-var alarm = vehicle ? vehicle.security.alarm : '';
-var centralLocking = vehicle ? vehicle.security.centralLocking : '';
-var immobilizer = vehicle ? vehicle.security.immobilizer : '';
-var gearLock = vehicle ? vehicle.security.gearLock : '';
-
-var photo1 = vehicle && vehicle.photos[0]
-				? "/vehicle/view/".concat(vehicle._id).concat("/photo/1")
-				: "/static/img/image-placeholder.png";
-var photo2 = vehicle && vehicle.photos[1]
-				? "/vehicle/view/".concat(vehicle._id).concat("/photo/2")
-				: "/static/img/image-placeholder.png";
-var photo3 = vehicle && vehicle.photos[2]
-				? "/vehicle/view/".concat(vehicle._id).concat("/photo/3")
-				: "/static/img/image-placeholder.png";
-var photo4 = vehicle && vehicle.photos[3]
-				? "/vehicle/view/".concat(vehicle._id).concat("/photo/4")
-				: "/static/img/image-placeholder.png";
-
-var price = vehicle ? vehicle.price.value : '';
-var negotiable = vehicle ? vehicle.price.negotiable : '';
-
-var comments = vehicle ? vehicle.comments : '';
-%>
-
-<form method="post" action="/vehicle/<%=method%>" enctype="multipart/form-data">
+<form method="post" action="/seller/<%=seller._id%>/vehicle/<%=method%>" enctype="multipart/form-data">
 	<div class="page-header">
 		<h1><%=heading%></h1>
 	</div>
 
-	<input type="hidden" name="vehicle[_id]" value="<%=_id%>" />
+	<input type="hidden" name="vehicle[_id]" value="<%=vehicle._id%>" />
 
 	<p class="span4" style="margin-left:0">
 		<span>Market:</span>
@@ -64,7 +20,7 @@ var comments = vehicle ? vehicle.comments : '';
 		</span>
 
 		<input type="hidden" id="market"
-			   name="vehicle[market]" value="<%=market%>" />
+			   name="vehicle[market]" value="<%=vehicle.market%>" />
 	</p>
 
 	<br /><br />
@@ -132,7 +88,7 @@ var comments = vehicle ? vehicle.comments : '';
 					<label>Mileage:</label>
 
 					<input id="mileage" type="text" name="vehicle[description][mileage]"
-						   value="<%=mileage%>"/>
+						   value="<%=vehicle.description.mileage%>"/>
 
 					<span class="add-on">km</span>
 				</div>
@@ -169,7 +125,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="fullServiceHistory"
 						   name="vehicle[description][fullServiceHistory]"
-						   value="<%=fullServiceHistory%>" />
+						   value="<%=vehicle.description.fullServiceHistory%>" />
 				</p>
 			</fieldset>
 		</div>
@@ -184,7 +140,7 @@ var comments = vehicle ? vehicle.comments : '';
 					<label>Engine Capacity:</label>
 					<input class="input-small" type="text" id="engineCapacity"
 						   name="vehicle[mechanics][engineCapacity]"
-						   value="<%=engineCapacity%>" />
+						   value="<%=vehicle.mechanics.engineCapacity%>" />
 					<span class="add-on">L</span>
 				</div>
 
@@ -241,7 +197,7 @@ var comments = vehicle ? vehicle.comments : '';
 					</span>
 
 					<input type="hidden" id="absBrakes" name="vehicle[mechanics][absBrakes]"
-						   value="<%=absBrakes%>" />
+						   value="<%=vehicle.mechanics.absBrakes%>" />
 
 					<br /><br />
 
@@ -256,7 +212,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="powerSteering"
 						   name="vehicle[mechanics][powerSteering]"
-						   value="<%=powerSteering%>" />
+						   value="<%=vehicle.mechanics.powerSteering%>" />
 				</p>
 			</fieldset>
 		</div>
@@ -295,7 +251,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="airConditioning"
 						   name="vehicle[luxuries][airConditioning]"
-						   value="<%=airConditioning%>" />
+						   value="<%=vehicle.luxuries.airConditioning%>" />
 
 					<br /><br />
 
@@ -310,7 +266,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="cdPlayer"
 						   name="vehicle[luxuries][cdPlayer]"
-						   value="<%=cdPlayer%>" />
+						   value="<%=vehicle.luxuries.cdPlayer%>" />
 
 					<br /><br />
 
@@ -325,7 +281,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="radio"
 						   name="vehicle[luxuries][radio]"
-						   value="<%=radio%>" />
+						   value="<%=vehicle.luxuries.radio%>" />
 				</p>
 			</fieldset>
 		</div>
@@ -348,7 +304,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="alarm"
 						   name="vehicle[security][alarm]"
-						   value="<%=alarm%>" />
+						   value="<%=vehicle.security.alarm%>" />
 
 					<br /><br />
 
@@ -365,7 +321,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="centralLocking"
 						   name="vehicle[security][centralLocking]"
-						   value="<%=centralLocking%>" />
+						   value="<%=vehicle.security.centralLocking%>" />
 
 					<br /><br />
 
@@ -380,7 +336,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="immobilizer"
 						   name="vehicle[security][immobilizer]"
-						   value="<%=immobilizer%>" />
+						   value="<%=vehicle.security.immobilizer%>" />
 
 					<br /><br />
 
@@ -395,7 +351,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="gearLock"
 						   name="vehicle[security][gearLock]"
-						   value="<%=gearLock%>" />
+						   value="<%=vehicle.security.gearLock%>" />
 				</p>
 			</fieldset>
 		</div>
@@ -433,7 +389,7 @@ var comments = vehicle ? vehicle.comments : '';
             <ul class="thumbnails">
 				<li class="span3">
 					<div class="thumbnail">
-						<img id="photo1" src="<%=photo1%>" alt="">
+						<img id="photo1" src="<%=vehicle.photos[0]%>" alt="">
 							<div class="caption">
 								<h4 >Photo 1</h4>
 								<p>
@@ -448,7 +404,7 @@ var comments = vehicle ? vehicle.comments : '';
 				</li>
 				<li class="span3">
 					<div class="thumbnail">
-						<img id="photo2"  src="<%=photo2%>" alt="">
+						<img id="photo2"  src="<%=vehicle.photos[1]%>" alt="">
 							<div class="caption">
 								<h4>Photo 2</h4>
 								<p>
@@ -463,7 +419,7 @@ var comments = vehicle ? vehicle.comments : '';
 				</li>
 				<li class="span3">
 					<div class="thumbnail">
-						<img id="photo3" src="<%=photo3%>" alt="">
+						<img id="photo3" src="<%=vehicle.photos[2]%>" alt="">
 							<div class="caption">
 								<h4>Photo 3</h4>
 								<p>
@@ -478,7 +434,7 @@ var comments = vehicle ? vehicle.comments : '';
 				</li>
 				<li class="span3">
 					<div class="thumbnail">
-						<img id="photo4" src="<%=photo4%>" alt="">
+						<img id="photo4" src="<%=vehicle.photos[3]%>" alt="">
 							<div class="caption">
 								<h4>Photo 4</h4>
 								<p>
@@ -508,7 +464,7 @@ var comments = vehicle ? vehicle.comments : '';
 					<span class="add-on">R</span>
 
 					<input id="price" type="text" name="vehicle[price][value]"
-						   value="<%=price%>" />
+						   value="<%=vehicle.price.value%>" />
 
 					<span class="add-on">.00</span>
 				</div>
@@ -529,7 +485,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 					<input type="hidden" id="negotiable"
 						   name="vehicle[price][negotiable]"
-						   value="<%=negotiable%>" />
+						   value="<%=vehicle.price.negotiable%>" />
 				</p>
 			</div>
 		</div>
@@ -539,7 +495,7 @@ var comments = vehicle ? vehicle.comments : '';
 
 	<label>Comments:</label>
 
-	<textarea class="span5" cols="1" rows="3" id="comments" name="vehicle[comments]"><%=comments%></textarea>
+	<textarea class="span5" cols="1" rows="3" id="comments" name="vehicle[comments]"><%=vehicle.comments%></textarea>
 
 	<div class="form-actions">
 		<button type="submit" class="btn btn-primary" ><%=buttonCaption%></button>
