--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -2,7 +2,7 @@
 <% script('../../../static/js/vehicle-registration-form.js') -%>
 <% script('../../../static/js/bootstrap.file-input.js') -%>
 
-<form method="post" action="/seller/<%=seller._id%>/vehicle/<%=method%>" enctype="multipart/form-data">
+<form method="post" action="/vehicles/<%=method%>" enctype="multipart/form-data">
 	<div class="page-header">
 		<h1><%=heading%></h1>
 	</div>
