--- a/views/seller-profile-page.ejs
+++ b/views/seller-profile-page.ejs
@@ -41,7 +41,7 @@
 		</div>
     </fieldset>
     <div class="form-actions">
-		<a href="/seller/<%=seller._id%>/edit" class="btn">Edit</a>
+		<a href="/sellers/<%=seller._id%>/edit" class="btn">Edit</a>
 		<button class="btn btn-link">Delete</button>
 		<a href="/vehicles/add" class="btn btn-primary pull-right">Advertise a Vehicle</a>
     </div>
