--- a/views/password-forgot-form.ejs
+++ b/views/password-forgot-form.ejs
@@ -1,4 +1,4 @@
-<% layout('../../views/layout') -%>
+<% layout('../views/layout') -%>
 
 <form method="post" action="/password/forgot">
 	<fieldset>
@@ -10,12 +10,12 @@
 			address, with instructions for resetting your password.
 		</div>
 
-		<div class="control-group <%=emailAlertType%>">
+		<div class="control-group <%=error.emailAlertType%>">
 			<label class="control-label">Email</label>
 			<div class="controls">
-				<input type="email" name="seller[emailAddress]" value="<%=emailAddress%>"
+				<input type="email" name="user[emailAddress]" value="<%=error.emailAddress%>"
 						required="required" />
-				<span class="help-block"><%=emailError%></span>
+				<span class="help-block"><%=error.message%></span>
 			</div>
 		</div>
 
