--- a/views/password-reset-form.ejs
+++ b/views/password-reset-form.ejs
@@ -1,5 +1,5 @@
-<% layout('../../views/layout') -%>
-<% script('/assets/js/reset-password.js') -%>
+<% layout('../views/layout') -%>
+<% script('../../static/js/password-reset-form.js') -%>
 
 <form id="reset" method="post" action="/password/reset">
 	<input type="hidden" name="user[emailAddress]" value="<%=emailAddress %>" />
