Fixed links to photos in views/vehicle-registration-form.ejs.

--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -73,10 +73,9 @@
 					<% for (var year = thisYear; year >= 1886; year--) { %>
 					<option value="<%=year%>"><%=year %></option>
 					<% } %>
-
 				</select>
 
-
+				<input type="hidden" id="manufacturers" value="<%=manufacturersString %>"/>
 			</fieldset>
 		</div>
 
